# tables

./: AUDIT-GNOME-GUI-SPEC.md  Cargo.toml  README.md  SPEC.md  io.github.hanthor.tables.json  justfile  meson.build  org.tunaos.tables.json
.github/workflows/: publish-flatpak.yml
data/: io.github.hanthor.tables.desktop  io.github.hanthor.tables.metainfo.xml  meson.build
src/: charts.py  engine.js  engine.rs  fileio.py  main.py  main.rs  meson.build  tables.in  window.py  window.rs
tests/gui/: test_tables.py  test_tables_e2e.py
tests/unit/: test_fileio.py
