install_data(
  'io.github.hanthor.tables.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data(
  'io.github.hanthor.tables.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo',
)

install_data(
  'icons/hicolor/scalable/apps/io.github.hanthor.tables.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)
